--- a/ML/recommendation.ipynb
+++ b/ML/recommendation.ipynb
@@ -74,7 +74,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "c868d3c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Determine the optimal number of clusters using the Elbow Method\n",
+    "inertia = []\n",
+    "k_range = range(1, 11)\n",
+    "\n",
+    "for k in k_range:\n",
+    "    kmeans = KMeans(n_clusters=k, random_state=42, n_init=10)\n",
+    "    kmeans.fit(X_scaled)\n",
+    "    inertia.append(kmeans.inertia_)\n",
+    "\n",
+    "# Plot the Elbow curve\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.plot(k_range, inertia, marker='o', linestyle='--')\n",
+    "plt.xlabel('Number of Clusters (K)')\n",
+    "plt.ylabel('Inertia (WCSS)')\n",
+    "plt.title('Elbow Method for Optimal K')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27ab47f7-42c1-443d-8671-b7ad99e11600",
    "metadata": {},
    "outputs": [
@@ -97,22 +122,6 @@
     }
    ],
    "source": [
-    "# # Determine the optimal number of clusters using the Elbow Method\n",
-    "# inertia = []\n",
-    "# k_range = range(1, 11)\n",
-    "\n",
-    "# for k in k_range:\n",
-    "#     kmeans = KMeans(n_clusters=k, random_state=42, n_init=10)\n",
-    "#     kmeans.fit(X_scaled)\n",
-    "#     inertia.append(kmeans.inertia_)\n",
-    "\n",
-    "# # Plot the Elbow curve\n",
-    "# plt.figure(figsize=(8, 5))\n",
-    "# plt.plot(k_range, inertia, marker='o', linestyle='--')\n",
-    "# plt.xlabel('Number of Clusters (K)')\n",
-    "# plt.ylabel('Inertia (WCSS)')\n",
-    "# plt.title('Elbow Method for Optimal K')\n",
-    "# plt.show()\n",
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "silhouette_scores = []\n",
